service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oranges
  name: oranges
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    deployment: orange
