ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voyager
spec:
  rules:
    - host: voyager.app.ocp4.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voyager
                port:
                  number: 8080
